# jie-jie

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
python-impl/: .env.example  Dockerfile  pyproject.toml
python-impl/data/: agent_eval_checkpoints.db-shm  agent_eval_checkpoints.db-wal
python-impl/data/evaluation/: agent_cases.json  agent_eval_latest.json  agent_eval_latest.md  latest_results.json  latest_results.md  rag_cases.json
python-impl/data/knowledge/: after_sales_policy.md  faq.md  product_guide.md  shipping_policy.md
python-impl/scripts/: evaluate_agent.py  evaluate_rag.py  gradio_demo.py  index_knowledge.py  rebuild_memory_index.py  seed_agent_eval_data.py  seed_demo_data.py
python-impl/src/smart_cs/: __init__.py  config.py  main.py
python-impl/tests/: conftest.py
python-impl/tests/api/: support.py  test_conversations.py  test_health.py  test_image_message.py  test_knowledge_reply.py
python-impl/tests/golden/: agent_workflow_cases.jsonl
python-impl/tests/integration/: test_action_confirmation.py  test_image_after_sales.py  test_milvus_hybrid.py  test_seed_demo_data.py
python-impl/tests/unit/: test_agent_eval_seed.py  test_agent_evaluation.py  test_agent_prompts.py  test_agent_runtime_hil.py  test_agent_tool_wrappers.py  test_context_builder.py  test_context_projector.py  test_demo_dependencies.py  test_evaluate_agent_script.py  test_gradio_demo.py  test_knowledge_service.py  test_long_term_memory_extractor.py  test_markdown_windows.py  test_memory.py  test_memory_audit.py  test_memory_retrieval.py  test_memory_selector.py  (+14 more)
(+69 files in other folders)
