[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-cs-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy>=2.0,<3",
    "langchain>=1.0,<2",
    "langchain-openai>=1.0,<2",
    "langchain-text-splitters>=1.0,<2",
    "langchain-milvus>=0.3.3,<1",
    "sentence-transformers>=3.4,<4",
    "langgraph>=1.0,<2",
    "langgraph-checkpoint-sqlite>=2.0",
    "python-multipart>=0.0.20,<1",
]

[project.optional-dependencies]
test = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
]
demo = [
    "gradio>=4,<6",
    "requests>=2.32,<3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring backing services",
]
